NIFI-14129 Removed QueryClause record
- Replaced Collection of QueryClauses with Optional values for where clause and order by clause in QueryStatementRequest
- Removed defaultValue() from ColumnDefinition
- Moved internal DatabaseAdapterDatabaseDialectService and set to package-private visibility for internal use